fixed spacing small screen overflow and button active color

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -311,7 +311,8 @@
           padding: var(--space-8);
           box-shadow: 0px 0px 0px 2px var(--color-inner-card-border);
           .title {
-            font-size: var(--size-20);
+            font-size: var(--size-18);
+            font-weight: bold;
           }
         }
       }
