--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -9,9 +9,9 @@
     box-shadow: 0px 0px 0px 2px var(--color-dark-blue);
     &:hover {
       background-color: var(--color-tan--focus);
-      color: var(--color-blue--focus);
-      fill: var(--color-blue--focus);
-      box-shadow: 0px 0px 0px 2px var(--color-blue--focus);
+      color: var(--color-active);
+      fill: var(--color-active);
+      box-shadow: 0px 0px 0px 2px var(--color-active);
     }
   }
   &.action {
